2nd commit after adding basic html to three pages.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,21 @@
 
     <img src="/Users/joshuaduncan/Desktop/UofU%20Bootcamp/Basic-Portfolio/assets/images/JoshProfile.jpg">
 
+    <p> My mane is Joshua Duncan. I live in Heber City, Utah with my wife Tiffany.  
+        We have two amazing kids, a boy this 19 years old and attending the University of Utah and a 16 
+        year old daughter that's a Junior in High School. I was born in Salt Lake City but have lived in 
+        the Heber Valley all my life.  My wife also grew up in this area so we didn't go far from home. 
+    </p>
+    <p> My Dad is a professional Artist named Robert Duncan and for the last 22 years my wife and I have run
+        his publishing business Robert Duncan Studios.  We publish his artwork as posters, prints, cards and 
+        calendars.  It's been a rewarding business that I will continue but I am feeling like it is time for
+        a change which is why I'm taking this bootcamp.
+    </p>
+    <p>
+        I love the outdoors and nature in general. I am a licensed falconer and have hunted with captive and wild caught 
+        hawks and falcons.  I've trained Redtail Hawks, Prairie Falcons, Peregrine Falcons, and Kestrels.  I don't currently
+        have the time for the hobby so I don't have a bird right now but I plan to again in the future.  I also
+        like to fish occasionally and my family and I love hiking and just getting outside. 
+    </p>
 </body>
 </html>
