--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,22 @@
         <li><a href=contact.html>Contact</a></li>
     </ul>
 
+    <h2>Contact</h2>
+
+    <div form>
+    <form>
+        <label for="name">Name</label><br>
+        <input type="text" name="name">
+        <br>
+        <label for="email">Email</label><br>
+        <input type="text" name="email_id">
+        <br>
+        <label for="">Message</label><br>
+        <input textarea="text" name="message"><br>
+        <input type="submit" value="Submit">
+        <br>
+    </form>
+    </div>
 <body>
     
 </body>
