--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,13 @@
         <li><a href=portfolio.html>Portfolio</a></li>
         <li><a href=contact.html>Contact</a></li>
     </ul>
+
+    <h2>Portfolio</h2>
     
+    <img src="https://loremflickr.com/320/240" />
+    <img src="https://loremflickr.com/320/240" />
+    <img src="https://loremflickr.com/320/240" />
+    <img src="https://loremflickr.com/320/240" />
+    <img src="https://loremflickr.com/320/240" />
 </body>
 </html>
