Added more html to pages and started on css for top header

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <title>About Me</title>
-
+    <section id="name">
     <h1>Joshua Duncan</h1>
+    </section>
 
     <ul>
         <li><a href=index.html>About</a></li>
@@ -16,8 +18,9 @@
         <li><a href=contact.html>Contact</a></li>
     </ul>
 
+
     <h2>Portfolio</h2>
-    
+
     <img src="https://loremflickr.com/320/240" />
     <img src="https://loremflickr.com/320/240" />
     <img src="https://loremflickr.com/320/240" />
