--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
-<title>About Me</title>
-
+<body>
+    <title>About Me</title>
+    <section id="name">
     <h1>Joshua Duncan</h1>
+    </section>
 
     <ul>
         <li><a href=index.html>About</a></li>
