Last commit for sunday

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <title>About Me</title>
+
     <section id="name">
     <h1>Joshua Duncan</h1>
     </section>
-
+   
     <ul>
         <li><a href=index.html>About</a></li>
         <li><a href=portfolio.html>Portfolio</a></li>
         <li><a href=contact.html>Contact</a></li>
     </ul>
 
+<section id="grey">
     <h2>About Me</h2>
 
     <img src="/Users/joshuaduncan/Desktop/UofU%20Bootcamp/Basic-Portfolio/assets/images/JoshProfile.jpg">
@@ -38,5 +40,6 @@
         have the time for the hobby so I don't have a bird right now but I plan to again in the future.  I also
         like to fish occasionally and my family and I love hiking and just getting outside. 
     </p>
+</section>
 </body>
 </html>
