Updated all html files

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 <h1>Joshua Duncan</h1>
                 <aside class=sidemenu>
                     <ul class="hlist">
-                        <li><a href=index.html>About</a></li>
-                        <li><a href=portfolio.html>Portfolio</a></li>
                         <li><a href=contact.html>Contact</a></li>
+                        <li><a href=portfolio.html>Portfolio</a></li>
+                        <li><a href=index.html>About</a></li>
                     </ul>
                 </aside>
 
@@ -25,8 +25,8 @@
 
                 <img src="/Users/joshuaduncan/Desktop/UofU%20Bootcamp/Basic-Portfolio/assets/images/JoshProfile.jpg">
 
-                <p> My mane is Joshua Duncan. I live in Heber City, Utah with my wife Tiffany.  
-                    We have two amazing kids, a boy this 19 years old and attending the University of Utah and a 16 
+                <p> My name is Joshua Duncan. I live in Heber City, Utah with my wife Tiffany.  
+                    We have two amazing kids, a boy that is 19 years old and attending the University of Utah and a 16 
                     year old daughter that's a Junior in High School. I was born in Salt Lake City but have lived in 
                     the Heber Valley all my life.  My wife also grew up in this area so we didn't go far from home. 
                 </p>
