--- a/portfolio.html
+++ b/portfolio.html
@@ -4,27 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 <body>
-    <title>About Me</title>
-    <section id="name">
-    <h1>Joshua Duncan</h1>
-    </section>
+        <header>
+            <name class="name">
+                <h1>Joshua Duncan</h1>
+                <aside class=sidemenu>
+                    <ul class="hlist">
+                        <li><a href=contact.html>Contact</a></li>
+                        <li><a href=portfolio.html>Portfolio</a></li>
+                        <li><a href=index.html>About</a></li>
+                    </ul>
+                </aside>
 
-    <ul>
-        <li><a href=index.html>About</a></li>
-        <li><a href=portfolio.html>Portfolio</a></li>
-        <li><a href=contact.html>Contact</a></li>
-    </ul>
+            </name>
+        </header>
+        <div class="container">
+                <h2>Portfolio</h2>
+                
+                <img src="https://loremflickr.com/320/240" />
+                <img src="https://loremflickr.com/320/240" />
+                <img src="https://loremflickr.com/320/240" />
+                <img src="https://loremflickr.com/320/240" />
+                <img src="https://loremflickr.com/320/240" />
+        </div>
+        <footer class="footer">
 
+        </footer>
 
-    <h2>Portfolio</h2>
+    </div>
 
-    <img src="https://loremflickr.com/320/240" />
-    <img src="https://loremflickr.com/320/240" />
-    <img src="https://loremflickr.com/320/240" />
-    <img src="https://loremflickr.com/320/240" />
-    <img src="https://loremflickr.com/320/240" />
+    
 </body>
 </html>
