--- a/contact.html
+++ b/contact.html
@@ -4,37 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 <body>
-    <title>About Me</title>
-    <section id="name">
-    <h1>Joshua Duncan</h1>
-    </section>
+        <header>
+            <name class="name">
+                <h1>Joshua Duncan</h1>
+                <aside class=sidemenu>
+                    <ul class="hlist">
+                        <li><a href=contact.html>Contact</a></li>
+                        <li><a href=portfolio.html>Portfolio</a></li>
+                        <li><a href=index.html>About</a></li>
+                    </ul>
+                </aside>
 
-    <ul>
-        <li><a href=index.html>About</a></li>
-        <li><a href=portfolio.html>Portfolio</a></li>
-        <li><a href=contact.html>Contact</a></li>
-    </ul>
+            </name>
+        </header>
+        <div class="container">
+                <h2>Contact</h2>
+                <form>
+                    <label for="name">Name</label><br>
+                    <input type="text" name="name">
+                    <br>
+                    <label for="email">Email</label><br>
+                    <input type="text" name="email_id">
+                    <br>
+                    <label for="">Message</label><br>
+                    <input textarea="text" name="message"><br>
+                    <input type="submit" value="Submit">
+                    <br>
+                </form>
+        </div>
+        <footer class="footer">
 
-    <h2>Contact</h2>
+        </footer>
 
-    <div form>
-    <form>
-        <label for="name">Name</label><br>
-        <input type="text" name="name">
-        <br>
-        <label for="email">Email</label><br>
-        <input type="text" name="email_id">
-        <br>
-        <label for="">Message</label><br>
-        <input textarea="text" name="message"><br>
-        <input type="submit" value="Submit">
-        <br>
-    </form>
     </div>
-<body>
+
     
 </body>
 </html>
