Changed a few tag names and updated html

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 </head>
 <body>
         <header>
-            <name class="name">
                 <h1>Joshua Duncan</h1>
-                <aside class=sidemenu>
+                <nav class=nav>
                     <ul class="hlist">
                         <li><a href=contact.html>Contact</a></li>
                         <li><a href=portfolio.html>Portfolio</a></li>
                         <li><a href=index.html>About</a></li>
                     </ul>
-                </aside>
-
+                </nav>
             </name>
         </header>
         <div class="container">
