--- a/portfolio.html
+++ b/portfolio.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>About Me</title>
+    <title>Portfolio</title>
 </head>
 <body>
         <header>
-            <name class="name">
                 <h1>Joshua Duncan</h1>
-                <aside class=sidemenu>
+                <nav class=nav>
                     <ul class="hlist">
                         <li><a href=contact.html>Contact</a></li>
                         <li><a href=portfolio.html>Portfolio</a></li>
                         <li><a href=index.html>About</a></li>
                     </ul>
-                </aside>
-
+                </nav>
             </name>
         </header>
         <div class="container">
