Figured out how to fix the heading centered at 960px, updated all html

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Portfolio</title>
+    <title>About Me</title>
 </head>
 <body>
         <header>
+            <div class="headcontain">
                 <h1>Joshua Duncan</h1>
                 <nav class=nav>
                     <ul class="hlist">
@@ -16,7 +17,7 @@
                         <li><a href=index.html>About</a></li>
                     </ul>
                 </nav>
-            </name>
+            </div>
         </header>
         <div class="container">
                 <h2>Portfolio</h2>
