--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
         <header>
+            <div class="headcontain">
                 <h1>Joshua Duncan</h1>
                 <nav class=nav>
                     <ul class="hlist">
@@ -16,6 +17,7 @@
                         <li><a href=index.html>About</a></li>
                     </ul>
                 </nav>
+            </div>
         </header>
         <div class="container">
                 <h2>About Me</h2>
