Finished the Contact page

--- a/contact.html
+++ b/contact.html
@@ -23,13 +23,13 @@
                 <h2>Contact</h2>
                 <form>
                     <label for="name">Name</label><br>
-                    <input type="text" name="name">
+                    <input type="text" name="name" placeholder="John Smith">
                     <br>
                     <label for="email">Email</label><br>
-                    <input type="text" name="email_id">
+                    <input type="text" name="email_id" placeholder="example@email.com">
                     <br>
-                    <label for="">Message</label><br>
-                    <input textarea="text" name="message"><br>
+                    <label for="Message">Message</label><br>
+                    <textarea id="Message" name="Message" placeholder="Message.."></textarea><br>
                     <input type="submit" value="Submit">
                     <br>
                 </form>
