--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
                 <h2>About Me</h2>
 
-                <img src="/Users/joshuaduncan/Desktop/UofU%20Bootcamp/Basic-Portfolio/assets/images/JoshProfile.jpg" class="profile" alt="Profile">
+                <img src="assets/images/JoshProfile.jpg" class="profile" alt="Profile">
 
                 <p> My name is Joshua Duncan. I live in Heber City, Utah with my wife Tiffany.  
                     We have two amazing kids, a boy that is 19 years old and attending the University of Utah and a 16 
