Added personal photos to portfolio and finished all

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 </form>
         </div>
         <footer class="footer">
-
+            <h5>Copyright 2020 Joshua Duncan</h5>
         </footer>
 
 </body>
