--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </p>
         </div>
         <footer class="footer">
-
+            <h5>Copyright 2020 Joshua Duncan</h5>
         </footer>
     
 </body>
