--- a/portfolio.html
+++ b/portfolio.html
@@ -23,29 +23,33 @@
                 <h2>Portfolio</h2>
             <div class="imagecontain">
                 <div class="images">
-                <img src="https://loremflickr.com/320/240" class="port"/>
-                <h4>Image 1</h4>
+                    <img src="assets/images/Family-Photo.jpg" class="port"/>
+                    <h4>My Family</h4>
                 </div>
                 <div class="images">
-                <img src="https://loremflickr.com/320/240" class="port"/>
-                <h4>Image 2</h4>
+                    <img src="assets/images/CannonBeach.jpg" class="port"/>
+                    <h4>My Life</h4>
                 </div>
                 <div class="images">
-                <img src="https://loremflickr.com/320/240" class="port"/>
-                <h4>Image 3</h4>
+                    <img src="assets/images/Falconry.jpg" class="port"/>
+                    <h4>My Hobby</h4>
                 </div>
                 <div class="images">
-                <img src="https://loremflickr.com/320/240" class="port"/>
-                <h4>Image 4</h4>
+                    <img src="assets/images/skiday.jpg" class="port"/>
+                    <h4>Our Hobby</h4>
                 </div>
                 <div class="images">
-                <img src="https://loremflickr.com/320/240" class="port"/>
-                <h4>Image 5</h4>
+                    <img src="assets/images/RDcalendar.jpg" class="port"/>
+                    <h4>My Job</h4>
+                </div>
+                <div class="images">
+                    <img src="assets/images/Our-Giant.jpg" class="port"/>
+                    <h4>My Job 2</h4>
                 </div>
             </div>
         </div>
         <footer class="footer">
-
+            <h5>Copyright 2020 Joshua Duncan</h5>
         </footer>
 
 </body>
