--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <p> My name is Joshua Duncan. I live in Heber City, Utah with my wife Tiffany.  
                     We have two amazing kids, a boy that is 19 years old and attending the University of Utah and a 16 
                     year old daughter that's a Junior in High School. I was born in Salt Lake City but have lived in 
-                    the Heber Valley all my life.  My wife also grew up in this area so we didn't go far from home. 
+                    the Heber Valley all my life.  My wife also grew up in this area, so we didn't go far from home. 
                 </p>
                 <p> My Dad is a professional Artist named Robert Duncan and for the last 22 years my wife and I have run
                     his publishing business Robert Duncan Studios.  We publish his artwork as posters, prints, cards and 
-                    calendars.  It's been a rewarding business that I will continue but I am feeling like it is time for
-                    a change which is why I'm taking this bootcamp.
+                    calendars.  It's been a rewarding business that I will continue, but I am feeling like it is time for
+                    a change, which is why I'm taking this bootcamp.
                 </p>
                 <p>
                     I love the outdoors and nature in general. I am a licensed falconer and have hunted with captive and wild caught 
