--- a/portfolio.html
+++ b/portfolio.html
@@ -28,23 +28,19 @@
                 </div>
                 <div class="images">
                     <img src="assets/images/CannonBeach.jpg" class="port"/>
-                    <h4>My Life</h4>
+                    <h4>Us</h4>
                 </div>
                 <div class="images">
                     <img src="assets/images/Falconry.jpg" class="port"/>
-                    <h4>My Hobby</h4>
+                    <h4>Weird Hobbies</h4>
                 </div>
                 <div class="images">
                     <img src="assets/images/skiday.jpg" class="port"/>
-                    <h4>Our Hobby</h4>
+                    <h4>Ski Day</h4>
                 </div>
                 <div class="images">
                     <img src="assets/images/RDcalendar.jpg" class="port"/>
                     <h4>My Job</h4>
-                </div>
-                <div class="images">
-                    <img src="assets/images/Our-Giant.jpg" class="port"/>
-                    <h4>My Job 2</h4>
                 </div>
             </div>
         </div>
